--- a/better_site/main/templates/main/home.html
+++ b/better_site/main/templates/main/home.html
@@ -106,7 +106,7 @@
                 <div class="counters">
                     <div>
                         <div class="counter">
-                            <h1><span data-count="156">0</span></h1>
+                            <h1><span data-count="{{credit_amount}}">0</span></h1>
                             <h3>Написано статей</h3>
                         </div>
                     </div>
@@ -162,7 +162,7 @@
                 <div class="counters counters_black counters_2">
                     <div>
                         <div class="counter counter_2">
-                            <h1><span data-count="256">0</span></h1>
+                            <h1><span data-count="{{debit_amount}}">0</span></h1>
                             <h3>Написано статей</h3>
                         </div>
                     </div>
@@ -223,7 +223,7 @@
                 <div class="counters counters_3">
                     <div>
                         <div class="counter counter_3">
-                            <h1><span data-count="256">0</span></h1>
+                            <h1><span data-count="{{savings_amount}}">0</span></h1>
                             <h3>Написано статей</h3>
                         </div>
                     </div>
