--- a/better_site/main/static/main/css/main.css
+++ b/better_site/main/static/main/css/main.css
@@ -1421,13 +1421,15 @@ textarea:focus ~ .place_holder {
 
 .like-button {
 /*    background-color: red;*/
-    width: 200px;
-    height: 130px;
+    transform: translateX(-35px);
+    width: 70vw;
+    height: 80px;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     margin: 0;
     padding: 0;
+    position: relative;
 }
 
 .heart-bg {
@@ -1462,7 +1464,9 @@ textarea:focus ~ .place_holder {
     margin: 0;
     padding: 0;
     font-size: 1.5rem;
-/*    background-color: blueviolet;*/
+/*    background-color: #cc9ef6;*/
+    position: absolute;
+    left: 80px;
 }
 
 .like-button .heart-icon.liked{
