--- a/better_site/main/static/main/css/main.css
+++ b/better_site/main/static/main/css/main.css
@@ -148,7 +148,7 @@ nav {
     align-items: center;
     row-gap: .25rem;
     color: var(--title-color);
-    font-weight: 600;
+    font-weight: 400;
     text-decoration: none;
     font-size: var(--normal-font-size);
     opacity: .3;
@@ -1483,7 +1483,84 @@ textarea:focus ~ .place_holder {
   }
 }
 
+.dropdown-content {
+/*    background-color: #c0e5b6;*/
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    z-index: 1;
+}
 
+.dropdown-content .links {
+    font-size: 1rem;
+    margin: 0;
+    padding: 0;
+    row-gap: 0;
+    background-color: white;
+/*    display: none;*/
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 4rem;
+    background-color: white;
+/*    backdrop-filter: blur(150px);*/
+    border-radius: 15px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+
+    visibility: hidden;
+    opacity: 0;
+    float: none;
+
+    transform: translateY(-70px);
+    transition: .2s;
+
+}
+
+.dropdown-content .links a {
+/*    background-color: blueviolet;*/
+    width: 100%;
+    margin: 0;
+    padding: 15px;
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    color: rgba(0, 0, 0, 0.5);
+    font-weight: 400;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    float: none;
+}
+
+.dropdown-content .links a:last-child {
+    border-bottom: none;
+}
+
+.dropdown-content:hover .links {
+    display: flex;
+    flex-direction: column;
+    pointer-events: auto;
+    visibility: visible;
+    opacity: 1;
+    transform: translateY(0px);
+    text-align: center;
+
+}
+
+.profile {
+    transition: .2s;
+    color:rgba(0,0,0, 0.3);
+    font-size: 1.2rem;
+}
+
+.dropdown-content:hover i{
+    color: #ff007d;
+}
+
+
+.dropdown-content .links a:hover {
+    color: #ff007d;
+}
 
 /* for medium devices */
 @media screen and (min-width: 576px) {
