--- a/better_site/main/templates/main/layout.html
+++ b/better_site/main/templates/main/layout.html
@@ -11,6 +11,7 @@
     <title>{% block title %}{% endblock %}</title>
 
     <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
+    <link rel="icon" type="image/png" href="{% static 'main/img/small_logo_2.png' %}">
 
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
@@ -61,9 +62,21 @@
                     </li>
 
                     <li class="nav_item">
-                        <a href="FAQ" class="nav_link">
-                            <i class="fa-solid fa-gift nav_icon"></i>
-                            <span class="nav_name">Промо</span>
+<!--                        <a href="FAQ" class="nav_link">-->
+<!--                            <i class="fa-solid fa-gift nav_icon"></i>-->
+<!--                            <span class="nav_name">Промо</span>-->
+                            <div class="dropdown-content">
+                                <div class="profile"><i class="fa-regular fa-circle-user" ></i></div>
+                                <div class="links">
+                                    {% if not user %}
+                                        <a href="#">Войти</a>
+                                        <a href="#">Зарегистрироваться</a>
+                                    {% else %}
+                                        <a href="#">Профиль</a>
+                                        <a href="#">Выйти</a>
+                                    {% endif %}
+                                </div>
+                            </div>
                         </a>
                     </li>
                 </ul>
