logout button redirect previous page

--- a/better_site/article_detail/templates/article_detail/article_detail.html
+++ b/better_site/article_detail/templates/article_detail/article_detail.html
@@ -88,7 +88,7 @@
         </div>
     </div>
 
-    {% if not user %}
+    {% if not user.is_authenticated  %}
         <div class="login_button">
             <a href="{% url 'login' category=category id=id %}">Войти, чтобы оставить комментарий</a>
         </div>
