after login/signup redirect to previous page

--- a/better_site/accounts/templates/accounts/login.html
+++ b/better_site/accounts/templates/accounts/login.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <div class="form_wrapper">
-    <form class="site_form site_form_login" action="/account/{{category}}/{{id}}/login/" method="post">
+    <form class="site_form site_form_login" action="{% url 'login' %}" method="post">
         {% csrf_token %}
         <p class="register_label">Вход</p>
 
@@ -31,8 +31,8 @@
             {% endfor %}
 
             <div class="to_login">
-                <p>Не зарегестрированы?&nbsp;<a href="{% url 'sign_up' category=category id=id  %}">Регистрация</a></p>
-            </div> 
+                <p>Не зарегестрированы?&nbsp;<a href="{% url 'sign_up' %}?next={{ next }}">Регистрация</a></p>
+            </div>
 
          </div>
 </div>
