--- a/better_site/main/templates/main/layout.html
+++ b/better_site/main/templates/main/layout.html
@@ -69,8 +69,8 @@
                                 <div class="profile"><i class="fa-regular fa-circle-user" ></i></div>
                                 <div class="links">
                                     {% if not user.is_authenticated %}
-                                        <a href="#">Войти</a>
-                                        <a href="#">Зарегистрироваться</a>
+                                        <a href="{% url 'login' %}?next={{ request.path }}">Войти</a>
+                                        <a href="{% url 'sign_up' %}?next={{ request.path }}">Зарегистрироваться</a>
                                     {% else %}
                                         <a href="#">Профиль</a>
                                         <a href="{% url 'logout' %}?next={{ request.path }}">Выйти</a>
