--- a/better_site/main/templates/main/layout.html
+++ b/better_site/main/templates/main/layout.html
@@ -66,7 +66,10 @@
 <!--                            <i class="fa-solid fa-gift nav_icon"></i>-->
 <!--                            <span class="nav_name">Промо</span>-->
                             <div class="dropdown-content">
-                                <div class="profile"><i class="fa-regular fa-circle-user" ></i></div>
+                                <div class="profile">
+<!--                                    <i class="fa-regular fa-circle-user" ></i>-->
+                                    <i class="fa-solid fa-circle-user profile_icon"></i>
+                                </div>
                                 <div class="links">
                                     {% if not user.is_authenticated %}
                                         <a href="{% url 'login' %}?next={{ request.path }}">Войти</a>
