--- a/better_site/main/templates/main/layout.html
+++ b/better_site/main/templates/main/layout.html
@@ -70,7 +70,7 @@
 <!--                                    <i class="fa-regular fa-circle-user" ></i>-->
                                     <i class="fa-solid fa-circle-user profile_icon"></i>
                                 </div>
-                                <div class="links">
+                                <div class="links active">
                                     {% if not user.is_authenticated %}
                                         <a href="{% url 'login' %}?next={{ request.path }}">Войти</a>
                                         <a href="{% url 'sign_up' %}?next={{ request.path }}">Зарегистрироваться</a>
@@ -116,6 +116,17 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
 <script>
+
+let profile_icon = document.querySelector('.profile');
+let links =  document.querySelector('.dropdown-content .links');
+profile_icon.addEventListener('click', () => {
+    if (links.className.includes('active')) {
+        links.classList.remove("active")
+    }
+    else {links.classList.add("active")}
+    console.log('good')
+});
+
 
     $( document ).ready(function() {
 
@@ -165,6 +176,7 @@
 
         });
     });
+
 
 </script>
 
