--- a/better_site/main/templates/main/layout.html
+++ b/better_site/main/templates/main/layout.html
@@ -68,9 +68,12 @@
                             <div class="dropdown-content">
                                 <div class="profile">
 <!--                                    <i class="fa-regular fa-circle-user" ></i>-->
-                                    <i class="fa-solid fa-circle-user profile_icon"></i>
+<!--                                    <i class="fa-solid fa-circle-user profile_icon"></i>-->
+<!--                                    <i class="fa-regular fa-user profile_icon"></i>-->
+                                    <i class="fa-solid fa-user profile_icon"></i>
                                 </div>
-                                <div class="links active">
+                                <div class="links">
+                                        <i class="fa-solid fa-user profile_icon_window"></i>
                                     {% if not user.is_authenticated %}
                                         <a href="{% url 'login' %}?next={{ request.path }}">Войти</a>
                                         <a href="{% url 'sign_up' %}?next={{ request.path }}">Зарегистрироваться</a>
@@ -120,10 +123,10 @@
 let profile_icon = document.querySelector('.profile');
 let links =  document.querySelector('.dropdown-content .links');
 profile_icon.addEventListener('click', () => {
-    if (links.className.includes('active')) {
-        links.classList.remove("active")
+    if (links.className.includes('links_active')) {
+        links.classList.remove("links_active")
     }
-    else {links.classList.add("active")}
+    else {links.classList.add("links_active")}
     console.log('good')
 });
 
