--- a/better_site/main/templates/main/searched_for.html
+++ b/better_site/main/templates/main/searched_for.html
@@ -1,17 +1,12 @@
 {% extends 'main/layout.html' %}
 
-{% block title %}Home{% endblock %}
+{% block title %}searched-for{% endblock %}
 
 
 {% block content %}
 
-<form action="{% url 'searched_for' %}" method="POST" style="margin-top: 10vh;">
-    {% csrf_token %}
-
-    <input type="search" placeholder="Искать" name="searched">
-    <button type="submit">Искать</button>
-</form>
-
+    {% if searched %}
+    <h1>вы искали {{ searched }}</h1>
     <div class="credit_articles_list">
 
          <ul>
@@ -35,6 +30,8 @@
 
 
     </div>
+    {% endif %}
+
 
 
 {% endblock %}
