--- a/better_site/main/static/main/css/main.css
+++ b/better_site/main/static/main/css/main.css
@@ -801,13 +801,13 @@ nav {
 
 
 .credit_articles_list {
-    margin: 10vh 0 10vh 0;
-    padding: 5vh 0 0 10vh;
+    margin: 0 0 10vh 0;
+    padding: 2vh 0 0 10vh;
     width: 100vw;
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    /*background-color: greenyellow;*/
+/*    background-color: greenyellow;*/
     /*border-top: 4px solid #ff007d;*/
 }
 
@@ -819,7 +819,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: center;
-    /*background-color: red;*/
+/*    background-color: red;*/
     flex-direction: column;
 }
 
@@ -1566,6 +1566,107 @@ textarea:focus ~ .place_holder {
 
 .dropdown-content .links a:hover {
     color: #ff007d;
+}
+
+.search_form_container {
+    background-color: #ffffff;
+    margin: 10vh 0 0 0;
+    width: 40vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.search_form_container form {
+/*    background-color: red;*/
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    flex-direction: row;
+/*    row-gap: 3vh;*/
+    position: relative;
+}
+
+.search_form_container button {
+    background-color: #fcd8e2;
+    color: white;
+    height: 48px;
+    padding: 0.5% 2%;
+    margin: 0;
+    align-items: center;
+    justify-content: center;
+    font-size: 1rem;
+    border-color: transparent;
+    border-radius: 40px;
+    transition: .3s;
+    position: absolute;
+    right: 1px;
+}
+
+/*.search_form_container button:hover {*/
+/*    background-color: #fcd8e2;*/
+/*    color: #ff007d;*/
+/*    *//*border: 2px solid #ff007d;*/
+/*    box-shadow: inset 0px 0px 0px 1.5px #ff007d;*/
+/*}*/
+
+.search_form_container button:hover i {
+    transform: scale(-1, 1);
+}
+
+.search_form_container i {
+    font-size: 1.2rem;
+    transition: .3s;
+    width: 50px;
+/*    background-color: #009dff;*/
+}
+
+.search_form_container input {
+    border: 2px solid #fcd8e2;
+    border-radius: 40px;
+    padding-left: 2vh;
+    height: 50px;
+    width: 40vw;
+}
+
+input::placeholder {
+    color: rgba(0, 0, 0, 0.3);
+}
+
+.search_form_container input:focus {
+    border: 2px solid #fcd8e2;
+}
+
+.search_form_container input:focus ~ .search_button{
+    background-color: 1px solid #ff007d;
+}
+
+.searched_for {
+/*    background-color: red;*/
+    padding: 2vh 0 0 10vh;
+    margin: 0;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.searched_for p {
+/*    background-color: greenyellow;*/
+    height: 100%;
+    width: 90%;
+    font-size: 1.5rem;
+    margin: 0;
+    padding: 0 0 1vh 0;
+    border-bottom: 5px solid #ff007d;
+    font-weight: 700;
+}
+
+.searched_for p span {
+    color: #ff007d;
+    font-weight: 300;
 }
 
 /* for medium devices */
