--- a/better_site/main/templates/main/credit.html
+++ b/better_site/main/templates/main/credit.html
@@ -4,12 +4,14 @@
 
 
 {% block content %}
-<form action="{% url 'searched_for' %}" method="POST" style="margin-top: 10vh;">
-    {% csrf_token %}
+    <div class="search_form_container">
+        <form class="search_form" action="{% url 'searched_for' %}" method="POST">
+            {% csrf_token %}
 
-    <input type="search" placeholder="Искать" name="searched">
-    <button type="submit">Искать</button>
-</form>
+            <input class="search_input" type="search" placeholder="Искать" name="searched">
+            <button class="search_button" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+        </form>
+    </div>
 
     <div class="credit_articles_list">
 
