--- a/better_site/article_detail/templates/article_detail/article_detail.html
+++ b/better_site/article_detail/templates/article_detail/article_detail.html
@@ -53,7 +53,7 @@
         </div>
 
         <div class="comments_label">
-            <p>комментарии <span>{{article.comments.all.count}}</span></p>
+            <p>Комментарии <span>{{article.comments.all.count}}</span></p>
         </div>
     {% if not article.comments.all %}
     <div class="no_comments">
