--- a/better_site/accounts/templates/accounts/sign_up.html
+++ b/better_site/accounts/templates/accounts/sign_up.html
@@ -38,7 +38,7 @@
 <!--            {{form.errors}}-->
 
             {% for message in messages %}
-                <p class="error_message">{{message}}</p>
+               <p class="error_message"><i class="fa-solid fa-ban"></i>&nbsp;&nbsp;{{message}}</p>
             {% endfor %}
 
             <div class="to_login">
