--- a/better_site/main/templates/main/home.html
+++ b/better_site/main/templates/main/home.html
@@ -4,6 +4,13 @@
 
 
 {% block content %}
+        {% if messages %}
+        <div class="messages">
+            {% for message in messages %}
+                <p>{{ message }}&nbsp;&nbsp;&nbsp;<i class="fa-regular fa-circle-check"></i></p>
+            {% endfor %}
+        </div>
+        {% endif %}
 
     <div class="best_articles">
         {% for fresh in latest_article %}
