--- a/better_site/main/templates/main/layout.html
+++ b/better_site/main/templates/main/layout.html
@@ -92,13 +92,13 @@
 
 
     <main>
-        {% if messages %}
-        <div class="messages">
-            {% for message in messages %}
-                <p>{{ message }}</p>
-            {% endfor %}
-        </div>
-        {% endif %}
+<!--        {% if messages %}-->
+<!--        <div class="messages">-->
+<!--            {% for message in messages %}-->
+<!--                <p>{{ message }}</p>-->
+<!--            {% endfor %}-->
+<!--        </div>-->
+<!--        {% endif %}-->
         {% block content %}
         {% endblock %}
     </main>
@@ -128,7 +128,7 @@
 <script>
 
 
-setTimeout(fade_out, 1500);
+setTimeout(fade_out, 1200);
     function fade_out() {
         $(".messages").fadeOut(50, "linear").empty();
     }
