--- a/better_site/main/templates/main/credit.html
+++ b/better_site/main/templates/main/credit.html
@@ -7,7 +7,7 @@
         {% if messages %}
         <div class="messages">
             {% for message in messages %}
-                <p>{{ message }}&nbsp;&nbsp;&nbsp;<i class="fa-regular fa-circle-check"></i></p>
+                <p style="color: #26b726;">{{ message }}&nbsp;&nbsp;&nbsp;<i class="fa-regular fa-circle-check"></i></p>
             {% endfor %}
         </div>
         {% endif %}
