--- a/better_site/main/static/main/css/main.css
+++ b/better_site/main/static/main/css/main.css
@@ -79,7 +79,7 @@ ul {
     margin: 0;
     height: 10vh;
     min-width: 100vw;
-    z-index: var(--z-fixed);
+    z-index: 1000;
     transition: .4s;
     background-color: white;
 /*    background-color: transparent;
@@ -1693,20 +1693,148 @@ input::placeholder {
 }
 
 .update_profile_form_container {
-    border: 2px solid red;
-/*    background-color: greenyellow;*/
-    height: 70vh;
-    width: 50vh;
+/*    border: 2px solid red;*/
+    margin: 10vh 0 0 0;
+    padding: 10vh 0 0 5vw;
+/*    background-color: #fde0e0;*/
+    height: 90vh;
+    width: 100vw;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
 }
 
-.update_profile_form_container  form {
-/*    background-color: cornflowerblue;*/
-    width: 100%;
-    height: 100%;
+.update_profile_form_container .user_logo {
+/*    font-size: 13rem;*/
+    font-size: clamp(4.8rem, -12rem + 38.4vw, 12rem);
+/*    background-color: red;*/
+    color: #ea86b4;
 }
+
+.update_profile_form_container button {
+    width: 50px;
+    height: 50px;
+}
+
+.update_profile_form_container button {
+    font-size: 1.5rem;
+    position: absolute;
+    bottom: 5px;
+    pointer-events: auto;
+    cursor: pointer;
+    z-index: 100;
+    right: -30px;
+    transition: .08s;
+    background-color: transparent;
+    border-color: transparent;
+    color: #ff007d;
+/*    animation: zoom_in_zoom_out .2s;*/
+}
+
+.update_profile_form_container .pencil:active {
+    transform: scale(0.65);
+}
+
+
+.update_profile_form_container  form {
+/*    background-color: #a2f3a7;*/
+    padding: 0;
+    margin: 0;
+    width: 70%;
+    height: 70%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+}
+
+.update_profile_form_container  form p {
+/*    background-color: greenyellow;*/
+    margin: 0;
+    padding: 0 0 0 3vh;
+    height: 15%;
+    width: fit-content;
+    display: flex;
+    color: black;
+    font-size: clamp(2rem, -0.3333rem + 5.3333vw, 3rem);
+    justify-content: flex-start;
+    align-items: flex-start;
+    font-weight: 250;
+}
+
+
+.update_profile_form_container  form .form {
+/*    background-color: #00fff7;*/
+    margin: 0;
+    padding: 0 0 0 3vh;
+    height: 85%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+
+.update_profile_form_container  form .form .input {
+/*    background-color: red;*/
+    border: transparent;
+    margin: 2vh 0 0 0;
+    padding: 0;
+    width: 70%;
+    height: 4vh;
+/*    font-size: clamp(1.2rem, 0.5rem + 1.6vw, 1.5rem);*/
+    pointer-events: none;
+}
+
+.update_profile_form_container  form .form .email {
+    margin-top: 0;
+}
+
+.update_profile_form_container .field input {
+    color: rgba(0, 0, 0, 0.3);
+}
+
+.update_profile_form_container .name .username_field {
+    color: #ff007d;
+    font-size: clamp(1.8rem, 0.75rem + 2.4vw, 2.25rem);
+    font-weight: 600;
+}
+
+.update_profile_form_container .name .active {
+    color: black;
+}
+
+.update_profile_form_container .email .email_field {
+    color: rgba(0, 0, 0, 0.4);
+    font-size: clamp(0.9rem, -0.0333rem + 2.1333vw, 1.3rem);
+    font-weight: 400;
+}
+
+.update_profile_form_container .email .active {
+    color: black;
+}
+
+.update_profile_form_container .confirm_button {
+    width: 25vw;
+    border-radius: 30px;
+/*    display: none;*/
+    opacity: 0;
+    transform: translateY(-20px);
+    background-color: #ff007d;
+    color: white;
+    margin: 3vh 0 0 0;
+    padding: 0;
+    transition: .2s;
+    border-color: transparent;
+}
+
+.update_profile_form_container .confirm_button:hover {
+    background-color: #fcd8e2;
+    color: #ff007d;
+    box-shadow: inset 0px 0px 0px 1.5px #ff007d;
+    border-color: transparent;
+    border: 0px;
+}
+
 
 .messages {
     background-color: rgba(0, 0, 0, 0.07);
@@ -1735,13 +1863,14 @@ input::placeholder {
 /*    border: 1px solid #ff007d;*/
     border-radius: 30px;
     margin: 0;
-    padding: 0;
-    height: 15%;
-    width: 35%;
+    padding: 3%;
+    height: 17%;
+    width: 37%;
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
 }
 
 /* for medium devices */
