change password page

--- a/better_site/main/static/main/css/main.css
+++ b/better_site/main/static/main/css/main.css
@@ -1878,6 +1878,12 @@ input::placeholder {
     margin-top: 1vh;
 }
 
+.change_password_button {
+    background-color: #ff007d;
+    border-radius: 30px;
+
+}
+
 /* for medium devices */
 @media screen and (min-width: 576px) {
 
